--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@babel/runtime": "^7.1.2",
 		"bcrypt": "^2.0.0",
 		"jquery": "^3.3.1",
+		"unirest": "^0.6.0",
 		"watson-developer-cloud": "^3.3.0"
 	},
 	"scripts": {
